# ========== DOSYA: sentinel-ingest/Cargo.toml ==========
[package]
name = "sentinel-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asenkron Runtime
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"

# WebSocket İstemcisi
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# NATS Mesajlaşma Omurgası
async-nats = "0.34"

# Serileştirme (JSON -> Struct) Binance'in JSON'unu okumak için mecburi
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf (Struct -> Bytes) İçerideki iletişim dilimiz
prost = "0.12"

# Loglama
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0" # Temiz hata yönetimi

[build-dependencies]
# Protobuf dosyalarını derleme aşamasında Rust koduna çevirir
prost-build = "0.12"